welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: not found: value dance
  dance match {
  ^BDR2:10: error: value avance is not a member of Unit
    case"D"=> avance();avance();avance()avance()
                                        ^BDR2:11: error: value avance is not a member of Unit
    case"E"=> droite();avance();avance()avance()avance()
                                        ^BDR2:12: error: value avance is not a member of Unit
    case"F"=> droite();avance();avance()avance()avance()avance()
                                        ^